assets/less/tbpro/product/thundermail.less
@import "../breakpoints.less";
@import "../images.less";
@import "../../common/space.less";
@import "../nav.less";

#nav-link-thundermail {
    .mixin-active-nav-link();
}

header#masthead {
    align-items: center;
    display: flex;
    flex-direction: column;
    gap: 0.5rem;


    &>* {
        text-align: center;
    }

    h1 {
        white-space: wrap;
        // max-width: 80%;
    }

    p {
        max-width: 400px;
    }

    @media (min-width: @md) {

        h1 {
            font-size: 3rem;
        }
        p {
            max-width: 750px;
        }

    }

    @media (min-width: @lg) {
        h1 {
            font-size: 4.5rem;
        }
    }

    .product-logo {
        aspect-ratio: 16/9;
        background-position: top center;
        background-repeat: no-repeat;
        background-size: cover;
        height: 80px;

        .mixin-background-image('/media/img/tbpro/xs-thundermail-logo');
        @media (min-width: @md) {
            .mixin-background-image('/media/img/tbpro/xl-thundermail-logo');
        }
    }

    .hero-image {
        aspect-ratio: 1.9/1;

        width: 100%;
        .mixin-background-image('/media/img/tbpro/xs-thundermail-card');
        @media (min-width: @md) {
            .mixin-background-image('/media/img/tbpro/xl-thundermail-card');
        }
    }
}

section#overview {
    .overview-card-container {
        .overview-card {
            background-color: #1a202c;
            background-position: center center;
            background-repeat: no-repeat;
            background-size: cover;
        }

        .overview-card-1 {
            background-image: url('/media/img/tbpro/thundermail-bento-main.png');
            overflow: hidden;

            @media (min-width: @lg) {
                display: grid;
                grid-template-columns: 1fr;
                grid-template-rows: 1fr 6fr 1fr 2fr 1fr;
                gap: 0.5rem;

                header {
                    align-self: end;
                    grid-row: 3;
                    padding-inline: 2rem;
                }

                p {
                    grid-row: 4;
                    max-width: 368px;
                    padding-inline: 2rem;
                }
            }


            .overview-image {
                .mixin-background-image('/media/img/tbpro/xs-bento-standards');
                aspect-ratio: 2.6/1;
                background-size: contain;
                background-repeat: no-repeat;
                background-position: center center;

                margin-bottom: 1.5rem;
                margin-top: 1rem;
                @media (min-width: @lg) {
                    .mixin-background-image('/media/img/tbpro/xl-bento-standards');
                    aspect-ratio: 2.3/1;
                    grid-row: 2;
                }
            }
        }

        .overview-card-2 {
            background-image: url('/media/img/tbpro/thundermail-bento-right-top.png');

            @media (min-width: @lg) {
                display: grid;
                gap: 0.5rem;
                grid-template-columns: 1fr 1fr;
                grid-template-rows: 3fr 4fr;
                padding-inline: 0.75rem;

                header {
                    align-self: end;
                    grid-column: 1;
                    grid-row: 1;
                    padding: 0;
                    padding-left: 2rem;
                }
                p {
                    width: 100%;
                    grid-column: 1;
                    grid-row: 2;
                    padding: 0;
                    padding-bottom: 2rem;
                    padding-left: 2rem;
                }
            }

            .overview-image {
                .mixin-background-image('/media/img/tbpro/xs-bento-hosted');
                aspect-ratio: 1.2/1;
                background-size: contain;
                background-repeat: no-repeat;
                background-position: center center;
                margin: 0 auto;
                margin-top: 1.5rem;
                max-width: 180px;

                @media (min-width: @lg) {
                    grid-column: 2;
                    grid-row: 1 / -1;
                    height: 100%;
                    justify-self: start;
                    margin-left: 18px;
                    margin-top: 0;
                }
            }
        }
        .overview-card-3 {
            background-image: url('/media/img/tbpro/thundermail-bento-right-bottom.png');
            padding-bottom: 0;
            overflow: hidden;

            @media (min-width: @lg) {
                display: grid;
                gap: 0.5rem;
                grid-template-columns: 1fr 1fr;
                grid-template-rows: 3fr 4fr;
                padding-inline: 0.75rem 0;

                header {
                    align-self: end;
                    grid-column: 1;
                    grid-row: 1;
                    padding: 0;
                    padding-left: 2rem;
                }
                p {
                    // min-width: 331px;
                    grid-column: 1;
                    grid-row: 2;
                    padding: 0;
                    padding-left: 2rem;
                }
            }

            .overview-image {
                .mixin-background-image('/media/img/tbpro/xs-bento-domain');
                aspect-ratio: 1.2/1;
                background-size: contain;
                background-repeat: no-repeat;
                background-position: bottom right;

                height: 180px;
                margin-top: 1.125rem;
                margin-right: -2.5rem;
                width: 100%;

                @media (min-width: @md) {
                    .mixin-background-image('/media/img/tbpro/xl-bento-domain');
                    aspect-ratio: .9/1;
                }

                @media (min-width: @lg) {
                    margin-top: 0;
                    grid-column: 2;
                    grid-row: 1 / -1;
                    height: 100%;
                }

            }
        }
    }
}

